force-app/main/default/objects/SystemLog__c/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <inlineHelpText>The Name of the Apex Class, Trigger, Batch Apex or Queueable apex, LWC or AURA component</inlineHelpText>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>