force-app/main/default/objects/SystemLog__c/fields/FlowAPIName__c.field-meta.xml
<CustomField>
    <fullName>FlowAPIName__c</fullName>
    <inlineHelpText>The API Name of the flow</inlineHelpText>
    <label>Flow API Name</label>
    <length>768</length>
    <type>LongTextArea</type>
</CustomField>