force-app/main/default/objects/SystemLog__c/fields/FlowInterviewGuid__c.field-meta.xml
<CustomField>
    <fullName>FlowInterviewGuid__c</fullName>
    <label>Flow Interview Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>