force-app/main/default/objects/SystemLog__c/fields/FlowName__c.field-meta.xml
<CustomField>
    <fullName>FlowName__c</fullName>
    <inlineHelpText>The Name of Flow</inlineHelpText>
    <label>Flow Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>