force-app/main/default/objects/SystemLog__c/fields/FlowNode__c.field-meta.xml
<CustomField>
    <fullName>FlowNode__c</fullName>
    <inlineHelpText>The name of the node which is failing</inlineHelpText>
    <label>Flow Node</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>