force-app/main/default/objects/SystemLog__c/fields/FlowType__c.field-meta.xml
<CustomField>
    <fullName>FlowType__c</fullName>
    <label>Flow Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen Flow</fullName>
            </value>
            <value>
                <fullName>Scheduled Flow</fullName>
            </value>
            <value>
                <fullName>Record Trigger Flow</fullName>
            </value>
            <value>
                <fullName>Platform Event Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>