force-app/main/default/objects/SystemLog__c/fields/InterviewDurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>InterviewDurationInMinutes__c</fullName>
    <label>Interview Duration In Minutes</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>