force-app/main/default/objects/SystemLog__c/fields/InterviewEndTimestamp__c.field-meta.xml
<CustomField>
    <fullName>InterviewEndTimestamp__c</fullName>
    <label>Interview End Timestamp</label>
    <type>DateTime</type>
</CustomField>