force-app/main/default/objects/SystemLog__c/fields/InterviewStartTimestamp__c.field-meta.xml
<CustomField>
    <fullName>InterviewStartTimestamp__c</fullName>
    <label>Interview Start Timestamp</label>
    <type>DateTime</type>
</CustomField>