force-app/main/default/objects/SystemLog__c/fields/LogTitle__c.field-meta.xml
<CustomField>
    <fullName>LogTitle__c</fullName>
    <inlineHelpText>The Title of the Log</inlineHelpText>
    <label>Log Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>