force-app/main/default/objects/SystemLog__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>The information about the log</inlineHelpText>
    <label>Message</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>