force-app/main/default/objects/SystemLog__c/fields/ParentLog__c.field-meta.xml
<CustomField>
    <fullName>ParentLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Log</label>
    <referenceTo>SystemLog__c</referenceTo>
    <relationshipLabel>Related Logs</relationshipLabel>
    <relationshipName>SystemLogs</relationshipName>
    <type>Lookup</type>
</CustomField>