force-app/main/default/objects/SystemLog__c/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <inlineHelpText>The related record name</inlineHelpText>
    <label>Parent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>