force-app/main/default/objects/SystemLog__c/fields/RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecord__c</fullName>
    <formula>IF(
  AND(
     NOT ISBLANK( ParentId__c ),
     NOT ISBLANK(ParentName__c)
  ),
  HYPERLINK(&quot;/&quot;+ParentId__c, ParentName__c ,&quot;_self&quot;) ,
  IF(
    NOT ISBLANK(ParentId__c),
    HYPERLINK(&quot;/&quot;+ParentId__c,&quot;Related Record&quot; ,&quot;_self&quot;),
    &quot;N/A&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>