force-app/main/default/objects/SystemLog__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <inlineHelpText>The message by the user to close the bug</inlineHelpText>
    <label>Resolution Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>