force-app/main/default/objects/SystemLog__c/fields/SendEmail__c.field-meta.xml
<CustomField>
    <fullName>SendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked the email will be sent to the specific group of users</inlineHelpText>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>