force-app/main/default/objects/SystemLog__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <inlineHelpText>The complete error message line by line for debugging purpose</inlineHelpText>
    <label>Stack Trace</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>