force-app/main/default/objects/SystemLog__c/validationRules/Log_Title_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Log_Title_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( LogTitle__c )</errorConditionFormula>
    <errorDisplayField>LogTitle__c</errorDisplayField>
    <errorMessage>Log Title is required to create the System Log Record.</errorMessage>
</ValidationRule>